# Network-Automation-in-GNS3

./: .gitignore  .gitmodules  README.md
dnav3-code-master/intro-mdp/: requirements.txt
dnav3-code-master/verify/: requirements.txt
docs/: 00_configure_ssh_netconf_restconf_cisco_ios_16.6.ipynb  01_using_ncclient_to_connect_to_router.ipynb
docs/COMET/: 00_configure_ssh_netconf_restconf_cisco_ios_16.6.ipynb
docs/INE Python Network Automation/: 01_Lab_setup.ipynb
docs/INE-Python-Network-Automation/: 01_Lab_setup.ipynb  02_advantages_of_network_automation.ipynb  03_SSH_with_netmiko.ipynb
docs/MEGA-LAB/: 00_lab_setup.ipynb  00_lab_setup_initial.ipynb  00_lab_setup_v1.ipynb  00_lab_setup_v2.ipynb  01_lab_setup_refined.ipynb  02_DHCP_config_with_python_jinja.ipynb  03_GNS3_API_add_nodes.ipynb  04_Ansible_to_gather_information_and_Save.md
docs/MEGA-LAB/mega-lab-net-tools-test/: main.py  pyproject.toml  simple_dhcp.py
docs/MEGA-LAB/mega-lab-net-tools-test/ansible/: ansible.cfg
docs/MEGA-LAB/mega-lab-net-tools-test/ansible/inventories/: gather_commands.yml  hosts.yml
docs/MEGA-LAB/mega-lab-net-tools-test/app/: contants.py  device.py  gns3_link.py  gns3_node.py  gns3_project.py  utils.py
docs/MEGA-LAB/mega-lab-net-tools-test/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/MEGA-LAB/mega-lab-net-tools-test/app/templates/: dhcp.j2  dhcp2.j2
docs/MEGA-LAB/mega-lab-net-tools-test/output/: dhcpd.conf
docs/NETBOX/: 00_install_netbox.ipynb  NAPALM.postman_collection.json
docs/NETBOX/netbox-api/: pyproject.toml
docs/ROUTING/: 0_HSRP.md  (+1 more)
(+11 files in other folders)
