[tool.poetry]
name = "mega-lab-net-tools-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
httpx = "^0.13.3"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
