[tool.poetry]
name = "netbox-api"
version = "0.1.0"
description = "app to connect netbox api using Python"
authors = ["doanhluong <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
